--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
                 border-bottom: 1px solid #ddd;
             }
 
+        /* Mobile-friendly styles */
+        @media (max-width: 600px) {
+            .grid-item img {
+                max-width: 150px; /* smaller max width for phones */
+            }
+        }
+
+
             .grid-item .item-price {
                 position: absolute;
                 top: 8px;
