--- a/index.html
+++ b/index.html
@@ -19,21 +19,13 @@
         }
 
             nav .logo {
-                background: rgba(0, 0, 0, 0.6);
-                color: white;
-                font-weight: bold;
-                font-size: 22px;
-                padding: 10px 25px;
-                border: 1px solid white;
-                border-radius: 6px;
-                display: inline-flex;
-                align-items: center;
-                gap: 10px;
+                display: inline-block;
             }
 
-                nav .logo::before {
-                    content: '\1F6CD';
-                    font-size: 24px;
+                nav .logo img {
+                    max-height: 60px;
+                    height: auto;
+                    width: auto;
                 }
 
             nav ul {
@@ -178,7 +170,9 @@
 </head>
 <body>
     <nav>
-        <div class="logo">Karry Kraze</div>
+        <div class="logo">
+            <img src="Branding/LL_Black_01.png" alt="Karry Kraze Logo">
+        </div>
         <ul>
             <li><a href="#">Depop</a></li>
             <li><a href="#">Instagram</a></li>
@@ -201,24 +195,27 @@
     </div>
 
     <div class="grid">
-        <div class="grid-item big bestseller" data-price="45">
+        <!--Louis Vuitton Duo Messenger 1-->
+        <div class="grid-item big bestseller" data-price="144">
             <div class="item-inner">
-                <div class="item-price">$45</div>
+                <div class="item-price">$144</div>
                 <div class="item-img">
-                    <img class="default-image" src="Products/Bags/LV/CrossBody1/CB1Main.jpg" alt="Item 6">
-                    <img class="hover-image" src="Products/Bags/LV/CrossBody1/CB1Hover.jpg" alt="Hover 6">
+                    <img class="default-image" src="Products/Bags/LV/CrossBody1/CB1Main.jpg">
+                    <img class="hover-image" src="Products/Bags/LV/CrossBody1/CB1Hover.jpg">
                 </div>
-                <div class="item-name">Travel Duffel</div>
+                <div class="item-name">Louis Vuitton Duo Messenger 1</div>
             </div>
         </div>
-        <div class="grid-item big bestseller" data-price="45">
+
+        <!--Louis Vuitton Duo Messenger 1-->
+        <div class="grid-item big bestseller" data-price="144">
             <div class="item-inner">
-                <div class="item-price">$45</div>
+                <div class="item-price">$144</div>
                 <div class="item-img">
-                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg" alt="Item 6">
-                    <img class="hover-image" src="https://via.placeholder.com/300x250.png?text=Hovered+Image" alt="Hover 6">
+                    <img class="default-image" src="Products/Bags/LV/CrossBody1/CB1Main.jpg">
+                    <img class="hover-image" src="Products/Bags/LV/CrossBody1/CB1Hover.jpg">
                 </div>
-                <div class="item-name">dsa</div>
+                <div class="item-name">Louis Vuitton Duo Messenger 1</div>
             </div>
         </div>
         <div class="grid-item big bestseller" data-price="45">
