--- a/index.html
+++ b/index.html
@@ -49,15 +49,18 @@
         .filters {
             margin-top: 10px;
             padding: 10px;
+            text-align: left;
+            padding-left: 10px;
         }
 
             .filters button {
-                background: rgba(255,255,255,0.8);
-                border: 1px solid #ccc;
-                padding: 10px;
+                background: #f0f0f0;
+                border: none;
+                padding: 10px 16px;
                 margin: 5px;
                 font-weight: bold;
                 cursor: pointer;
+                border-radius: 999px;
             }
 
                 .filters button.active {
@@ -81,6 +84,11 @@
             will-change: transform;
             backface-visibility: hidden;
             transform-style: preserve-3d;
+            background: transparent;
+            padding: 10px;
+            text-align: left;
+            max-width: 300px;
+            margin: 0 auto;
         }
 
             .grid-item:hover {
@@ -91,78 +99,165 @@
                 position: relative;
             }
 
-            .grid-item img {
-                width: 100%;
-                max-width: 300px;
-                object-fit: cover;
-                display: block;
-                border-bottom: 1px solid #ddd;
-                transition: opacity 0.3s ease;
-            }
+        .outofstock-badge {
+            position: absolute;
+            top: 8px;
+            left: 8px;
+            background: gray;
+            color: white;
+            padding: 4px 8px;
+            font-size: 12px;
+            font-weight: bold;
+            text-transform: uppercase;
+            border-radius: 3px;
+            z-index: 3;
+        }
 
-                .grid-item img.hover-image {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    opacity: 0;
-                }
+        .sale-badge,
+        .bestseller-badge {
+            position: absolute;
+            top: 8px;
+            left: 8px;
+            padding: 4px 8px;
+            font-size: 12px;
+            font-weight: bold;
+            text-transform: uppercase;
+            border-radius: 3px;
+            z-index: 3;
+            color: white;
+        }
 
-            .grid-item:hover img.default-image {
+        .sale-badge {
+            background: darkred;
+        }
+
+        .bestseller-badge {
+            top: 8px;
+            right: 8px;
+            left: auto;
+            background: #f39c12;
+        }
+
+        .grid-item img {
+            width: 100%;
+            max-width: 300px;
+            object-fit: cover;
+            display: block;
+            transition: opacity 0.3s ease;
+        }
+
+        .grid-item.out-of-stock img {
+            opacity: 0.3;
+        }
+
+            .grid-item.out-of-stock img.hover-image {
                 opacity: 0;
             }
 
-            .grid-item:hover img.hover-image {
-                opacity: 1;
+        .grid-item.out-of-stock:hover img.hover-image {
+            opacity: 0.3;
+        }
+
+        .grid-item:hover img.default-image {
+            opacity: 0;
+        }
+
+        .grid-item img.hover-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            object-fit: cover;
+            transition: opacity 0.3s ease;
+        }
+
+        .grid-item:hover img.hover-image {
+            opacity: 1;
+        }
+
+        @media (max-width: 600px) {
+            .grid-item {
+                max-width: 150px;
             }
 
-        /* Mobile-friendly styles */
-        @media (max-width: 600px) {
+                .grid-item .item-desc {
+                    max-width: 100%;
+                    font-size: 12px;
+                    white-space: normal;
+                    overflow-wrap: break-word;
+                }
+
+            .outofstock-badge,
+            .sale-badge,
+            .bestseller-badge {
+                font-size: 10px;
+                padding: 2px 6px;
+            }
+
+            .grid-item .item-desc {
+                margin-top: 6px;
+                font-size: 14px;
+                color: #666;
+                word-wrap: break-word;
+                max-width: 100%;
+                white-space: normal;
+                overflow-wrap: break-word;
+            }
+
             .grid-item img {
-                max-width: 150px; /* smaller max width for phones */
+                width: 100%;
+                height: auto;
+                display: block;
+                object-fit: cover;
+                max-width: 150px;
+            }
+
+            .filters {
+                text-align: left;
+                padding-left: 1rem;
+                padding-right: 1rem;
+            }
+
+            .grid {
+                padding: 10px;
+                grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+            }
+
+            .grid-item {
+                padding: 5px;
             }
         }
 
         .grid-item .item-price {
-            position: absolute;
-            top: 8px;
-            right: 8px;
-            background: #ffffff;
-            color: #000000;
+            margin-top: 10px;
             font-weight: bold;
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 13px;
-            z-index: 2;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.15);
+            font-size: 16px;
+            color: #333;
+        }
+
+        .grid-item.sale .item-price {
+            color: darkred;
+        }
+
+        .grid-item .original-price {
+            text-decoration: line-through;
+            font-size: 12px;
+            color: #999;
+            font-weight: normal;
+            margin-left: 8px;
+        }
+
+        .grid-item .item-desc {
+            margin-top: 6px;
+            font-size: 14px;
+            color: #666;
+            word-wrap: break-word;
         }
 
         .grid-item .item-name {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background: #ffffff;
-            color: #000000;
-            font-weight: bold;
-            padding: 6px 0;
-            font-size: 13px;
-            box-shadow: 0 -1px 5px rgba(0,0,0,0.1);
-            z-index: 2;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .grid-item:hover .item-name {
-            opacity: 1;
-        }
-
-        .item-details {
-            padding: 10px;
-            position: relative;
+            display: none;
         }
     </style>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
@@ -171,67 +266,68 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="Branding/LL_Black_01.png" alt="Karry Kraze Logo">
+            <img src="https://via.placeholder.com/180x60.png?text=Karry+Kraze+Logo" alt="Karry Kraze Logo">
         </div>
         <ul>
             <li><a href="#">Depop</a></li>
             <li><a href="#">Instagram</a></li>
         </ul>
     </nav>
-
     <div class="filters">
         <div>
-            <button data-filter="*">Show All</button>
-            <button data-filter=".bestseller">Best Seller</button>
             <button data-filter=".small">Small</button>
             <button data-filter=".medium">Medium</button>
             <button data-filter=".big">Big</button>
         </div>
         <div>
-            <button data-sort-by="original-order">Default</button>
-            <button data-sort-by="price">Price: Low to High</button>
-            <button data-sort-by="price-desc">Price: High to Low</button>
+            <button data-filter=".bestseller">Best Seller</button>
+            <button data-filter=".sale">On Sale</button>
+            <button data-filter=":not(.out-of-stock)">In Stock</button>
+            <button id="toggle-price-sort" data-sort="default">Price <span id="price-sort-indicator">─</span></button>
+        </div>
+        <div style="margin-top: 10px; text-align: left;">
+            <button id="clear-filters" style="background: none; border: none; color: black; font-weight: bold; text-decoration: underline; cursor: pointer;">Clear all</button>
         </div>
     </div>
-
     <div class="grid">
-        <!--Louis Vuitton Duo Messenger 1-->
-        <div class="grid-item big bestseller" data-price="144">
+        <div class="grid-item small bestseller out-of-stock" data-price="29">
             <div class="item-inner">
-                <div class="item-price">$144</div>
                 <div class="item-img">
-                    <img class="default-image" src="Products/Bags/LV/CrossBody1/CB1Main.jpg">
-                    <img class="hover-image" src="Products/Bags/LV/CrossBody1/CB1Hover.jpg">
+                    <span class="outofstock-badge">Out of Stock</span>
+                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg">
+                    <img class="hover-image" src="https://via.placeholder.com/300x250.png?text=Hovered+Image">
                 </div>
-                <div class="item-name">Louis Vuitton Duo Messenger 1</div>
+                <div class="item-price">$29</div>
+                <div class="item-desc">Small Bag - Bestseller - Out of Stock</div>
             </div>
         </div>
-
-        <!--Louis Vuitton Duo Messenger 1-->
-        <div class="grid-item big bestseller" data-price="144">
+        <div class="grid-item big sale bestseller out-of-stock" data-price="65">
             <div class="item-inner">
-                <div class="item-price">$144</div>
                 <div class="item-img">
-                    <img class="default-image" src="Products/Bags/LV/CrossBody1/CB1Main.jpg">
-                    <img class="hover-image" src="Products/Bags/LV/CrossBody1/CB1Hover.jpg">
+                    <span class="outofstock-badge">Out of Stock</span>
+                    <span class="sale-badge">SALE</span>
+                    <span class="bestseller-badge">Best Seller</span>
+                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg">
+                    <img class="hover-image" src="https://target.scene7.com/is/image/Target/GUEST_bad004ae-2e13-4145-b000-131548f5498d?qlt=85&fmt=webp&hei=500&wid=500">
                 </div>
-                <div class="item-name">Louis Vuitton Duo Messenger 1</div>
+                <div class="item-price">$65 <span class="original-price">Typical: $90</span></div>
+                <div class="item-desc">Big Bag - All Badges</div>
             </div>
         </div>
-        <div class="grid-item big bestseller" data-price="45">
+        <div class="grid-item small bestseller" data-price="29">
             <div class="item-inner">
-                <div class="item-price">$45</div>
                 <div class="item-img">
-                    <img class="default-image" src="https://via.placeholder.com/300x250.png?text=Item+1" alt="Item 1">
-                    <img class="hover-image" src="https://via.placeholder.com/300x250.png?text=Hovered+Image" alt="Hover 1">
+                    <span class="bestseller-badge">Best Seller</span>
+                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg">
+                    <img class="hover-image" src="https://via.placeholder.com/300x250.png?text=Hovered+Image">
                 </div>
-                <div class="item-name">Travel Duffel</div>
+                <div class="item-price">$29</div>
+                <div class="item-desc">Small Bag - Bestseller - Out of Stock</div>
             </div>
         </div>
     </div>
-
     <script>
-    document.addEventListener('DOMContentLoaded', function () {
+        document.addEventListener('DOMContentLoaded', function () {
             var iso = new Isotope('.grid', {
                 itemSelector: '.grid-item',
                 layoutMode: 'masonry',
@@ -246,24 +342,57 @@
             });
 
             const filtersElem = document.querySelector('.filters');
-            filtersElem.addEventListener('click', function (event) {
-                if (!event.target.matches('button')) return;
+            const filterButtons = Array.from(filtersElem.querySelectorAll('button[data-filter]'));
 
-                document.querySelectorAll('.filters button').forEach(btn => btn.classList.remove('active'));
-                event.target.classList.add('active');
-
-                const filterValue = event.target.getAttribute('data-filter');
-                if (filterValue !== null) iso.arrange({ filter: filterValue });
-
-                const sortValue = event.target.getAttribute('data-sort-by');
-                if (sortValue === 'original-order') {
-                    iso.arrange({ sortBy: sortValue });
-                } else if (sortValue === 'price') {
-                    iso.arrange({ sortBy: 'price', sortAscending: true });
-                } else if (sortValue === 'price-desc') {
-                    iso.arrange({ sortBy: 'price', sortAscending: false });
-                }
+            filterButtons.forEach(button => {
+                button.addEventListener('click', function () {
+                    button.classList.toggle('active');
+                    const activeFilters = filterButtons.filter(btn => btn.classList.contains('active'));
+                    const sizeFilters = activeFilters.filter(btn => ['.small', '.medium', '.big'].includes(btn.getAttribute('data-filter'))).map(btn => btn.getAttribute('data-filter'));
+                    const tagFilters = activeFilters.filter(btn => !['.small', '.medium', '.big'].includes(btn.getAttribute('data-filter'))).map(btn => btn.getAttribute('data-filter'));
+                    let filterValue = '*';
+                    if (tagFilters.length && sizeFilters.length) {
+                        filterValue = sizeFilters.map(size => tagFilters.map(tag => size + tag).join('')).join(',');
+                    } else if (tagFilters.length) {
+                        filterValue = tagFilters.join('');
+                    } else if (sizeFilters.length) {
+                        filterValue = sizeFilters.join(',');
+                    }
+                    iso.arrange({ filter: filterValue });
+                });
             });
-        });</script>
+
+            document.getElementById('clear-filters').addEventListener('click', function () {
+                filterButtons.forEach(btn => btn.classList.remove('active'));
+                const sortIndicator = document.getElementById('price-sort-indicator');
+                if (sortIndicator) sortIndicator.textContent = '─';
+                document.getElementById('toggle-price-sort').setAttribute('data-sort', 'default');
+                iso.arrange({ filter: '*', sortBy: 'original-order' });
+            });
+
+            document.getElementById('toggle-price-sort').addEventListener('click', function () {
+                const btn = this;
+                const current = btn.getAttribute('data-sort');
+                const sortIndicator = document.getElementById('price-sort-indicator');
+                let next;
+
+                if (current === 'default') {
+                    next = 'asc';
+                    sortIndicator.textContent = '↑';
+                    iso.arrange({ sortBy: 'price', sortAscending: true });
+                } else if (current === 'asc') {
+                    next = 'desc';
+                    sortIndicator.textContent = '↓';
+                    iso.arrange({ sortBy: 'price', sortAscending: false });
+                } else {
+                    next = 'default';
+                    sortIndicator.textContent = '─';
+                    iso.arrange({ sortBy: 'original-order' });
+                }
+
+                btn.setAttribute('data-sort', next);
+            });
+        });
+    </script>
 </body>
 </html>
