--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
         @media (max-width: 600px) {
             .grid-item {
-                max-width: 150px;
+                max-width: 120px;
             }
 
                 .grid-item .item-desc {
@@ -290,6 +290,41 @@
         </div>
     </div>
     <div class="grid">
+        <div class="grid-item small bestseller out-of-stock" data-price="29">
+            <div class="item-inner">
+                <div class="item-img">
+                    <span class="outofstock-badge">Out of Stock</span>
+                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg">
+                    <img class="hover-image" src="https://via.placeholder.com/300x250.png?text=Hovered+Image">
+                </div>
+                <div class="item-price">$29</div>
+                <div class="item-desc">Small Bag - Bestseller - Out of Stock</div>
+            </div>
+        </div>
+        <div class="grid-item big sale bestseller out-of-stock" data-price="65">
+            <div class="item-inner">
+                <div class="item-img">
+                    <span class="outofstock-badge">Out of Stock</span>
+                    <span class="sale-badge">SALE</span>
+                    <span class="bestseller-badge">Best Seller</span>
+                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg">
+                    <img class="hover-image" src="https://target.scene7.com/is/image/Target/GUEST_bad004ae-2e13-4145-b000-131548f5498d?qlt=85&fmt=webp&hei=500&wid=500">
+                </div>
+                <div class="item-price">$65 <span class="original-price">Typical: $90</span></div>
+                <div class="item-desc">Big Bag - All Badges</div>
+            </div>
+        </div>
+        <div class="grid-item small bestseller" data-price="29">
+            <div class="item-inner">
+                <div class="item-img">
+                    <span class="bestseller-badge">Best Seller</span>
+                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg">
+                    <img class="hover-image" src="https://via.placeholder.com/300x250.png?text=Hovered+Image">
+                </div>
+                <div class="item-price">$29</div>
+                <div class="item-desc">Small Bag - Bestseller - Out of Stock</div>
+            </div>
+        </div>
         <div class="grid-item small bestseller out-of-stock" data-price="29">
             <div class="item-inner">
                 <div class="item-img">
