--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             background: transparent;
             padding: 10px;
             text-align: left;
-            max-width: 300px;
+            max-width: 28vw;
+            min-width: 90px;
             margin: 0 auto;
         }
 
@@ -178,9 +179,7 @@
         }
 
         @media (max-width: 600px) {
-            .grid-item {
-                max-width: 120px;
-            }
+            
 
                 .grid-item .item-desc {
                     max-width: 100%;
@@ -294,8 +293,8 @@
             <div class="item-inner">
                 <div class="item-img">
                     <span class="outofstock-badge">Out of Stock</span>
-                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg">
-                    <img class="hover-image" src="https://via.placeholder.com/300x250.png?text=Hovered+Image">
+                    <img class="default-image" src="Products/Bags/LV/CrossBody1/CB1Main.png">
+                    <img class="hover-image" src="Products/Bags/LV/CrossBody1/CB1Hover.jpg">
                 </div>
                 <div class="item-price">$29</div>
                 <div class="item-desc">Small Bag - Bestseller - Out of Stock</div>
