--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         .grid-item .item-price {
             margin-top: 10px;
             font-weight: bold;
-            font-size: 16px;
+            font-size: 26px;
             color: #333;
         }
 
@@ -265,7 +265,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="https://via.placeholder.com/180x60.png?text=Karry+Kraze+Logo" alt="Karry Kraze Logo">
+            <img src="Branding/LL_Black_01.png" alt="Karry Kraze Logo">
         </div>
         <ul>
             <li><a href="#">Depop</a></li>
@@ -289,14 +289,15 @@
         </div>
     </div>
     <div class="grid">
-        <div class="grid-item small bestseller out-of-stock" data-price="29">
+        <div class="grid-item small bestseller out-of-stock" data-price="144">
             <div class="item-inner">
                 <div class="item-img">
                     <span class="outofstock-badge">Out of Stock</span>
+                    <span class="bestseller-badge">Best Seller</span>
                     <img class="default-image" src="Products/Bags/LV/CrossBody1/CB1Main.png">
                     <img class="hover-image" src="Products/Bags/LV/CrossBody1/CB1Hover.jpg">
                 </div>
-                <div class="item-price">$29</div>
+                <div class="item-price">$144 <span class="original-price">$200</span></div>
                 <div class="item-desc">Small Bag - Bestseller - Out of Stock</div>
             </div>
         </div>
