--- a/index.html
+++ b/index.html
@@ -302,20 +302,18 @@
                     <img class="hover-image" src="Products/Bags/LV/CrossBody1/CB1Hover.jpg">
                 </div>
                 <div class="item-price">$144 <span class="original-price">$200</span></div>
-                <div class="item-desc">Small Bag - Bestseller - Out of Stock</div>
+                <div class="item-desc">Louis Vuitton Duo Messenger Bag</div>
             </div>
         </div>
-        <div class="grid-item big sale bestseller out-of-stock" data-price="65">
+        <div class="grid-item big sale " data-price="59">
             <div class="item-inner">
                 <div class="item-img">
-                    <span class="outofstock-badge">Out of Stock</span>
                     <span class="sale-badge">SALE</span>
-                    <span class="bestseller-badge">Best Seller</span>
-                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg">
-                    <img class="hover-image" src="https://target.scene7.com/is/image/Target/GUEST_bad004ae-2e13-4145-b000-131548f5498d?qlt=85&fmt=webp&hei=500&wid=500">
+                    <img class="default-image" src="Products/Bags/NonBrand/Bitches/BMain.png">
+                    <img class="hover-image" src="Products/Bags/NonBrand/Bitches/BHover.png">
                 </div>
-                <div class="item-price">$65 <span class="original-price">Typical: $90</span></div>
-                <div class="item-desc">Big Bag - All Badges</div>
+                <div class="item-price">$59 <span class="original-price">$110</span></div>
+                <div class="item-desc">B!tch#$ is Weird Tote Bag</div>
             </div>
         </div>
         <div class="grid-item small bestseller" data-price="29">
