--- a/index.html
+++ b/index.html
@@ -305,34 +305,34 @@
                 <div class="item-desc">Louis Vuitton Duo Messenger Bag</div>
             </div>
         </div>
-        <div class="grid-item big sale " data-price="59">
+        <div class="grid-item big sale nb" data-price="49.99">
             <div class="item-inner">
                 <div class="item-img">
                     <span class="sale-badge">SALE</span>
                     <img class="default-image" src="Products/Bags/NonBrand/Bitches/BMain.png">
-                    <img class="hover-image" src="Products/Bags/NonBrand/Bitches/BHover.png">
+                    <img class="hover-image" src="Products/Bags/NonBrand/Bitches/BHover.jpg">
                 </div>
                 <div class="item-price">$59 <span class="original-price">$110</span></div>
                 <div class="item-desc">B!tch#$ is Weird Tote Bag</div>
             </div>
         </div>
-        <div class="grid-item small bestseller" data-price="29">
+        <div class="grid-item sale nb" data-price="49.99">
             <div class="item-inner">
                 <div class="item-img">
-                    <span class="bestseller-badge">Best Seller</span>
-                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg">
-                    <img class="hover-image" src="https://via.placeholder.com/300x250.png?text=Hovered+Image">
+                    <span class="sale-badge">SALE</span>
+                    <img class="default-image" src="Products/Bags/NonBrand/HeartEmbossed/HEMain.png">
+                    <img class="hover-image" src="Products/Bags/NonBrand/HeartEmbossed/HEHover.jpg">
                 </div>
-                <div class="item-price">$29</div>
-                <div class="item-desc">Small Bag - Bestseller - Out of Stock</div>
+                <div class="item-price">$49.99</div>
+                <div class="item-desc">Heart Embossed Shoulder Bag</div>
             </div>
         </div>
-        <div class="grid-item small bestseller out-of-stock" data-price="29">
+        <div class="grid-item nb sale" data-price="29">
             <div class="item-inner">
                 <div class="item-img">
-                    <span class="outofstock-badge">Out of Stock</span>
-                    <img class="default-image" src="https://i.imgur.com/uIyFPl4.jpeg">
-                    <img class="hover-image" src="https://via.placeholder.com/300x250.png?text=Hovered+Image">
+                    <span class="sale-badge">SALE</span>
+                    <img class="default-image" src="Products/Bags/NonBrand/TheBucket/TBMain.png">
+                    <img class="hover-image" src="Products/Bags/NonBrand/TheBucket/TBHover.jpg">
                 </div>
                 <div class="item-price">$29</div>
                 <div class="item-desc">Small Bag - Bestseller - Out of Stock</div>
