--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@
     </nav>
     <div class="filters">
         <div>
+            <button data-filter=".nb">Non Branded</button>
             <button data-filter=".lv">Louis Vuitton</button>
             <button data-filter=".dior">Dior</button>
             <button data-filter=".chanel">Chanel</button>
             <button data-filter=".telfar">Telfar</button>
             <button data-filter=".marcj">Marc Jacobs</button>
-            <button data-filter=".nb">Non Branded</button>
             <button data-filter=".acc">Acccesories</button>
         </div>
         <div>
@@ -294,7 +294,7 @@
     </div>
     <div class="grid">
         <div class="grid-item lv bestseller out-of-stock" data-price="144">
-            <div class="item-inner">
+            <a href="https://www.depop.com/products/smojoyt-luxury-monogram-crossbody-bag-5f9f/manage/" class="item-inner">
                 <div class="item-img">
                     <span class="outofstock-badge">Out of Stock</span>
                     <span class="bestseller-badge">Best Seller</span>
@@ -303,21 +303,21 @@
                 </div>
                 <div class="item-price">$144 <span class="original-price">$200</span></div>
                 <div class="item-desc">Louis Vuitton Duo Messenger Bag</div>
-            </div>
+<</a>
         </div>
         <div class="grid-item big sale nb" data-price="49.99">
-            <div class="item-inner">
+            <a href="https://www.karrykraze.com/products/bags/Bag_BitesIsWeird" class="item-inner">
                 <div class="item-img">
                     <span class="sale-badge">SALE</span>
                     <img class="default-image" src="Products/Bags/NonBrand/Bitches/BMain.png">
                     <img class="hover-image" src="Products/Bags/NonBrand/Bitches/BHover.jpg">
                 </div>
-                <div class="item-price">$59 <span class="original-price">$110</span></div>
+                <div class="item-price">$49.99 <span class="original-price">$110</span></div>
                 <div class="item-desc">B!tch#$ is Weird Tote Bag</div>
-            </div>
+<</a>
         </div>
         <div class="grid-item sale nb" data-price="49.99">
-            <div class="item-inner">
+            <a href="https://www.karrykraze.com/products/bags/Bag_MiniHeart" class="item-inner">
                 <div class="item-img">
                     <span class="sale-badge">SALE</span>
                     <img class="default-image" src="Products/Bags/NonBrand/HeartEmbossed/HEMain.png">
@@ -325,18 +325,18 @@
                 </div>
                 <div class="item-price">$49.99</div>
                 <div class="item-desc">Heart Embossed Shoulder Bag</div>
-            </div>
+</a>
         </div>
-        <div class="grid-item nb sale" data-price="29">
-            <div class="item-inner">
+        <div class="grid-item nb sale" data-price="49.99">
+            <a href="https://www.karrykraze.com/products/bags/bag_TheBucket" class="item-inner">
                 <div class="item-img">
                     <span class="sale-badge">SALE</span>
                     <img class="default-image" src="Products/Bags/NonBrand/TheBucket/TBMain.png">
                     <img class="hover-image" src="Products/Bags/NonBrand/TheBucket/TBHover.jpg">
                 </div>
-                <div class="item-price">$29</div>
-                <div class="item-desc">Small Bag - Bestseller - Out of Stock</div>
-            </div>
+                <div class="item-price">$49.99</div>
+                <div class="item-desc">The Bucket Sack Bag</div>
+            </a>
         </div>
         <div class="grid-item big sale bestseller out-of-stock" data-price="65">
             <div class="item-inner">
