--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
         .grid-item .item-name {
             display: none;
         }
+        a.item-inner {
+            text-decoration: none;
+            color: inherit;
+            display: block; /* makes the whole area clickable */
+        }
+
     </style>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
@@ -303,7 +309,7 @@
                 </div>
                 <div class="item-price">$144 <span class="original-price">$200</span></div>
                 <div class="item-desc">Louis Vuitton Duo Messenger Bag</div>
-<</a>
+            </a>
         </div>
         <div class="grid-item big sale nb" data-price="49.99">
             <a href="https://www.karrykraze.com/products/bags/Bag_BitesIsWeird" class="item-inner">
@@ -314,7 +320,7 @@
                 </div>
                 <div class="item-price">$49.99 <span class="original-price">$110</span></div>
                 <div class="item-desc">B!tch#$ is Weird Tote Bag</div>
-<</a>
+            </a>
         </div>
         <div class="grid-item sale nb" data-price="49.99">
             <a href="https://www.karrykraze.com/products/bags/Bag_MiniHeart" class="item-inner">
@@ -325,7 +331,7 @@
                 </div>
                 <div class="item-price">$49.99</div>
                 <div class="item-desc">Heart Embossed Shoulder Bag</div>
-</a>
+            </a>
         </div>
         <div class="grid-item nb sale" data-price="49.99">
             <a href="https://www.karrykraze.com/products/bags/bag_TheBucket" class="item-inner">
